TWC3119-938: Fixed filter icon alignment in Tender (#2833)

--- a/Intel.MyDeals/Client/src/app/style/publishTender.css
+++ b/Intel.MyDeals/Client/src/app/style/publishTender.css
@@ -5,7 +5,7 @@
 #pubOpGrid .k-cell-inner .k-grid-filter {
     text-align: center !important;
     display: inline-block !important;
-    position: relative !important;
+    position: unset !important;
     padding: 0 !important;
     vertical-align: middle !important;
     align-content: center !important;
